# Proxmox-Guacamole-Sync

./: .coverage  .deepsource.yml  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  cli.py  config_example.py  debug_mac.py  guac_cli.py  guac_vm_manager.py  mypy_errors.txt  pyproject.toml  requirements.txt  restart_vm_for_agent.py  setup.sh  test_external.sh  test_guest_agent.py  test_mac_search.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deepsource-automerge.yml  no-emoji.yml
eu/spotlightforbugs/guac_sync/: __init__.py  cli.py
scripts/: check_no_emojis.py
src/guac_manager/: __init__.py  cli.py  network.py  pyproject.toml
tests/: test_cli.py  test_integration.py
