[project]
name = "proxmox-guacamole-sync"
version = "1.0.0"
description = "Synchronize Proxmox VMs with Apache Guacamole connections"
authors = [{name = "spotlightforbugs", email = "mail@spotlightforbugs.eu"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
    "urllib3>=2.0.0",
    "cryptography>=41.0.0",
    "wakeonlan>=3.1.0",
    "cleo>=2.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eu*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
guac-sync = "eu.spotlightforbugs.guac_sync.cli:main"
