[project]
name = "guac-vm-manager"
version = "2.0.0"
description = "A modular Python system for managing VMs in Guacamole and Proxmox with Wake-on-LAN functionality"
authors = [{name = "spotlightforbugs", email = "mail@spotlightforbugs.eu"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
    "urllib3>=2.0.0",
    "cryptography>=46.0.1",
    "wakeonlan>=3.1.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=6.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=25.9.0",
    "isort>=6.0.1",
    "mypy>=1.0.0",
]

[project.scripts]
guac-vm-manager = "guac_manager.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=src/guac_manager --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = ["__pycache__", ".venv", "build", "dist"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "types-requests>=2.32.4.20250913",
]
